--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
-  align-items: center;
-  background-color: #000;
   display: flex;
+  flex-flow: column wrap;
+  align-items: center;
   justify-content: center;
+  background-color: #000;
   height: 100vh;
   font-family: sans-serif;
 }
@@ -75,4 +76,12 @@ body {
 
 #btn:active {
   background-color: #06b;
+}
+
+#footer {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  margin: 1em;
 }
